--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,14 +2,43 @@
 layout: base
 ---
 
+<style>
+  /* Basic styling for layout */
+  .container {
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-start;
+  }
+
+  .column {
+      flex: 1;
+      padding: 20px;
+  }
+
+  /* Adjust styles as needed */
+  .right-column img {
+      max-width: 100%;
+      height: auto;
+      display: block;
+  }
+</style>
+
 <div class="home">
   {%- if page.title -%}
     <h1 class="page-heading">{{ page.title }}</h1>
   {%- endif -%}
 
-  {{ content }}
+  <div class="container">
+    <div class="column left-column">
+        <h2> About Me </h2>
+        <p>Hello there. Welcome to my website.</p>
+    </div>
+    <div class="column right-column">
+        <img src="/images/leojiang.jpg" alt="Leo's Image">
+    </div>
+  </div><hr>
 
-
+  <h2> Recent Updates </h2>
   {% if site.paginate %}
     {% assign posts = paginator.posts %}
   {% else %}
