--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
       {%- if site.author %}
         <ul class="contact-list">
           {% if site.author.name -%}
-            <li class="p-name">Created by Yu Jiang </li>
+            <li class="p-name">Created by <a href="https://github.com/yu-jiang">Yu Jiang</a></li>
           {% endif -%}
           {% if {}} -%}
             <li><a class="u-email" href="mailto:{{ site.author.email }}">{{ site.author.email }}</a></li>
