--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -7,15 +7,18 @@ layout: base
     {% assign posts = site.posts %}
     {%- if posts.size > 0 -%}
       <ul>
-        {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
+        {%- assign date_format = site.minima.date_format | default: "%b, %Y" -%}
         {%- for post in posts -%}
         {% if post.categories contains "award" %}
         <li>
-          <p>{{ post.date | date: date_format }}: {{ post.meta | escape }}
+            <p>{{ post.meta | escape }}, {{ post.date | date: date_format }} 
+            {%- if post.note -%}
+                &nbsp({{ post.note }})
+            {%- endif -%}
             <a href="{{ post.url | relative_url }}">
-                [More]
+                [...]
             </a>
-        </p>
+            </p>
         </li>
         {%- endif -%}
         {%- endfor -%}
