--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,24 +5,12 @@
 
     <div class="footer-col-wrapper">
       <div class="footer-col">
-      {%- if site.author %}
-        <ul class="contact-list">
-          {% if site.author.name -%}
-            <li class="p-name">Created by <a href="https://github.com/yu-jiang">Yu Jiang</a></li>
-          {% endif -%}
-          {% if {}} -%}
-            <li><a class="u-email" href="mailto:{{ site.author.email }}">{{ site.author.email }}</a></li>
-          {%- endif %}
-        </ul>
-      {%- endif %}
+        <p>Site last updated on {{ site.time  | date: '%B %d, %Y'}}</p>
       </div>
-      <div class="footer-col">
-        <p>{{ site.description | escape }}</p>
-      </div>
-    </div>
 
-    <div class="social-links">
-      {%- include social.html -%}
+      <div class="footer-col">
+        <p>Created and maintained by <a href="https://github.com/yu-jiang">Yu Jiang</a></p>
+        </div>
     </div>
 
   </div>
