--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -138,7 +138,6 @@
 .contact-list,
 .social-media-list {
   list-style: none;
-  margin-left: 0;
 }
 
 .footer-col-wrapper,
@@ -289,6 +288,7 @@
 .social-media-list {
   display: table;
   margin: 0 auto;
+  align-items: left;
   li {
     float: left;
     margin: 5px 10px 5px 0;
