updated home page

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,7 +32,7 @@ layout: base
   <div class="container">
     <div class="column left-column">
         <h2> About Me<Menu></Menu> </h2>
-        <p>Hello, there. I am Leo Jiang. Welcome to my website.</p>
+        <p>Hello, there. I am Leo Jiang, a pianist. Welcome to my website.</p>
         <div class="social-links">
           {%- include social.html -%}
         </div>
