--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
       </div>
 
       <div class="footer-col">
-        <p>Created and maintained by <a href="https://github.com/yu-jiang">Yu Jiang</a></p>
+        <p>Created and maintained by <a href="https://yu-jiang.github.io">Yu Jiang</a></p>
         </div>
     </div>
 
